--- a/web/index.html
+++ b/web/index.html
@@ -2,22 +2,23 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>chitragupta</title>
+  <title>Chitragupta</title>
 </head>
 <body>
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
 <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
-      apiKey: "AIzaSyDsGe6Fe4Or99m56jOnN6pbD_rC4XGP3xg",
-      authDomain: "chitragupta-007.firebaseapp.com",
-      databaseURL: "https://chitragupta-007.firebaseio.com",
-      projectId: "chitragupta-007",
-      storageBucket: "chitragupta-007.appspot.com",
-      messagingSenderId: "828418883693",
-      appId: "1:828418883693:web:ac5030e5989af51c257f64",
-      measurementId: "G-61222E237X"
+      apiKey: "AIzaSyDvQ-3REaEbi9ue91LXsK90C9BtNgbqhwc",
+      authDomain: "chitragupta-v22.firebaseapp.com",
+      databaseURL: "https://chitragupta-v22.firebaseio.com",
+      projectId: "chitragupta-v22",
+      storageBucket: "chitragupta-v22.appspot.com",
+      messagingSenderId: "123766642071",
+      appId: "1:123766642071:web:e87e33c5ee1ca4a0ca20d2",
+      measurementId: "G-S8E70T19DX"
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
