--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Chitragupta</title>
 </head>
-<body>
+<body id="app-container">
 <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
